[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://equipment_list.tscn" type="PackedScene" id=2]
[ext_resource path="res://setups.gd" type="Script" id=3]
[ext_resource path="res://interface/set.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/monster_list.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/prayer_list.tscn" type="PackedScene" id=6]

[node name="interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_right = 350.0
margin_bottom = 810.0
rect_min_size = Vector2( 350, 0 )
tab_align = 0

[node name="equipment" parent="HBoxContainer/TabContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="monster" parent="HBoxContainer/TabContainer" instance=ExtResource( 5 )]
visible = false

[node name="prayers" parent="HBoxContainer/TabContainer" instance=ExtResource( 6 )]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 354.0
margin_right = 1333.0
margin_bottom = 810.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 979.0
margin_bottom = 20.0

[node name="new_setup" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "New set"

[node name="save_set" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 133.0
margin_bottom = 20.0
text = "Save set"

[node name="load_set" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 203.0
margin_bottom = 20.0
text = "Load set"

[node name="setups" type="TabContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 979.0
margin_bottom = 810.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 3 )

[node name="0" parent="HBoxContainer/VBoxContainer/setups" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="item_selected" from="HBoxContainer/TabContainer/equipment" to="HBoxContainer/VBoxContainer/setups" method="_on_equipment_list_item_selected"]
[connection signal="item_selected" from="HBoxContainer/TabContainer/monster" to="HBoxContainer/VBoxContainer/setups" method="_on_monster_item_selected"]
[connection signal="prayer_selected" from="HBoxContainer/TabContainer/prayers" to="HBoxContainer/VBoxContainer/setups" method="_on_prayer_list_prayer_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/new_setup" to="HBoxContainer/VBoxContainer/setups" method="_on_new_setup_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/save_set" to="HBoxContainer/VBoxContainer/setups" method="_on_new_setup_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/load_set" to="HBoxContainer/VBoxContainer/setups" method="_on_new_setup_pressed"]
